@@ -20,7 +20,14 @@ internal class ImpactBombProj : ModProjectile
     public override string Texture => base.Texture.Replace("Proj", "");
 
     public override void SetStaticDefaults() => ProjectileID.Sets.Explosive[Type] = true;
-    public override void SetDefaults() => Projectile.CloneDefaults(ProjectileID.Bomb);
+
+    public override void SetDefaults()
+    {
+        Projectile.CloneDefaults(ProjectileID.Bomb);
+        Projectile.usesLocalNPCImmunity = true;
+        Projectile.localNPCHitCooldown = 10;
+    }
+
     public override bool? CanHitNPC(NPC target) => Projectile.Hitbox.Intersects(target.Hitbox) && !target.friendly;
 
     public override void AI()
@@ -45,6 +52,9 @@ internal class ImpactBombProj : ModProjectile
         Projectile.timeLeft = 3;
         return true;
     }
+
+    public override bool CanHitPvp(Player target) => Projectile.timeLeft is 2 or > 3;
+    public override bool CanHitPlayer(Player target) => Projectile.timeLeft is 2 or > 3;
 
     public override void OnHitPlayer(Player target, Player.HurtInfo info)
     {
