@@ -21,7 +21,14 @@ internal class ImpactDynamiteProj : ModProjectile
     public override string Texture => base.Texture.Replace("Proj", "");
 
     public override void SetStaticDefaults() => ProjectileID.Sets.Explosive[Type] = true;
-    public override void SetDefaults() => Projectile.CloneDefaults(ProjectileID.Dynamite);
+
+    public override void SetDefaults()
+    {
+        Projectile.CloneDefaults(ProjectileID.Dynamite);
+        Projectile.usesLocalNPCImmunity = true;
+        Projectile.localNPCHitCooldown = 10;
+    }
+
     public override bool? CanHitNPC(NPC target) => Projectile.Hitbox.Intersects(target.Hitbox) && !target.friendly;
 
     public override void AI()
@@ -48,6 +55,8 @@ internal class ImpactDynamiteProj : ModProjectile
     }
 
     public override void ModifyHitPlayer(Player target, ref Player.HurtModifiers modifiers) => modifiers.FinalDamage += 0.55f;
+    public override bool CanHitPvp(Player target) => Projectile.timeLeft is 2 or > 3;
+    public override bool CanHitPlayer(Player target) => Projectile.timeLeft is 2 or > 3;
 
     public override void OnHitPlayer(Player target, Player.HurtInfo info)
     {
