@@ -28,6 +28,8 @@ internal class UltrahazardousBombProj : ModProjectile
         Projectile.CloneDefaults(ProjectileID.Bomb);
         Projectile.width += 2;
         Projectile.height += 2;
+        Projectile.usesLocalNPCImmunity = true;
+        Projectile.localNPCHitCooldown = 10;
     }
 
     public override bool? CanHitNPC(NPC target) => Projectile.Hitbox.Intersects(target.Hitbox) && !target.friendly;
@@ -60,6 +62,9 @@ internal class UltrahazardousBombProj : ModProjectile
         Projectile.timeLeft = 3;
         return true;
     }
+
+    public override bool CanHitPvp(Player target) => Projectile.timeLeft is 2 or > 3;
+    public override bool CanHitPlayer(Player target) => Projectile.timeLeft is 2 or > 3;
 
     public override void OnHitPlayer(Player target, Player.HurtInfo info)
     {
@@ -96,6 +101,8 @@ internal class UltrahazardousBombIchorProj : ModProjectile
         Projectile.CloneDefaults(ProjectileID.Bomb);
         Projectile.width += 2;
         Projectile.height += 2;
+        Projectile.usesLocalNPCImmunity = true;
+        Projectile.localNPCHitCooldown = 10;
     }
 
     public override bool? CanHitNPC(NPC target) => Projectile.Hitbox.Intersects(target.Hitbox) && !target.friendly;
@@ -128,6 +135,9 @@ internal class UltrahazardousBombIchorProj : ModProjectile
         Projectile.timeLeft = 3;
         return true;
     }
+
+    public override bool CanHitPvp(Player target) => Projectile.timeLeft is 2 or > 3;
+    public override bool CanHitPlayer(Player target) => Projectile.timeLeft is 2 or > 3;
 
     public override void OnHitPlayer(Player target, Player.HurtInfo info)
     {
