@@ -25,7 +25,13 @@ internal class UltrahazardousGrenadeProj : ModProjectile
 {
     public override string Texture => base.Texture.Replace("Proj", "");
 
-    public override void SetDefaults() => Projectile.CloneDefaults(ProjectileID.Grenade);
+    public override void SetDefaults()
+    {
+        Projectile.CloneDefaults(ProjectileID.Grenade);
+        Projectile.usesLocalNPCImmunity = true;
+        Projectile.localNPCHitCooldown = 10;
+    }
+
     public override bool? CanHitNPC(NPC target) => Projectile.Hitbox.Intersects(target.Hitbox) && !target.friendly;
 
     public override void AI()
@@ -82,7 +88,13 @@ internal class UltrahazardousGrenadeIchorProj : ModProjectile
 {
     public override string Texture => base.Texture.Replace("Proj", "");
 
-    public override void SetDefaults() => Projectile.CloneDefaults(ProjectileID.Grenade);
+    public override void SetDefaults()
+    {
+        Projectile.CloneDefaults(ProjectileID.Grenade);
+        Projectile.usesLocalNPCImmunity = true;
+        Projectile.localNPCHitCooldown = 10;
+    }
+
     public override bool? CanHitNPC(NPC target) => Projectile.Hitbox.Intersects(target.Hitbox) && !target.friendly;
 
     public override void AI()
@@ -113,6 +125,9 @@ internal class UltrahazardousGrenadeIchorProj : ModProjectile
         Projectile.timeLeft = 3;
         return true;
     }
+
+    public override bool CanHitPvp(Player target) => Projectile.timeLeft is 2 or > 3;
+    public override bool CanHitPlayer(Player target) => Projectile.timeLeft is 2 or > 3;
 
     public override void OnHitPlayer(Player target, Player.HurtInfo info)
     {
