@@ -3,3 +3,4 @@ v1.0.0.1
 - Fixed ichorous Ultrahazardous Bombs not doing damage properly
 - Fixed ichorous Ultrahazardous Bombs being crafted with cursed flames
 - Made Red Slimes only drop 1 Red Gel at a time
+- Fixed all explosives dealing damage multiple times to enemies, players
